crates/ruff_python_parser/tests/snapshots/invalid_syntax@clause_expect_single_statement.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/inline/err/clause_expect_single_statement.py
---
## AST

```
Module(
    ModModule {
        node_index: NodeIndex(None),
        range: 0..23,
        body: [
            If(
                StmtIf {
                    node_index: NodeIndex(None),
                    range: 0..8,
                    pattern: None,
                    test: BooleanLiteral(
                        ExprBooleanLiteral {
                            node_index: NodeIndex(None),
                            range: 3..7,
                            value: true,
                        },
                    ),
                    body: [],
                    elif_else_clauses: [],
                },
            ),
            If(
                StmtIf {
                    node_index: NodeIndex(None),
                    range: 9..22,
                    pattern: None,
                    test: BooleanLiteral(
                        ExprBooleanLiteral {
                            node_index: NodeIndex(None),
                            range: 12..16,
                            value: true,
                        },
                    ),
                    body: [
                        Pass(
                            StmtPass {
                                node_index: NodeIndex(None),
                                range: 18..22,
                            },
                        ),
                    ],
                    elif_else_clauses: [],
                },
            ),
        ],
    },
)
```
## Errors

  |
1 | if True: if True: pass
  |          ^^ Syntax Error: Expected a simple statement
