crates/ruff_python_parser/tests/snapshots/invalid_syntax@debug_shadow_class.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/inline/err/debug_shadow_class.py
---
## AST

```
Module(
    ModModule {
        node_index: NodeIndex(None),
        range: 0..82,
        body: [
            ClassDef(
                StmtClassDef {
                    node_index: NodeIndex(None),
                    range: 0..20,
                    decorator_list: [],
                    name: Identifier {
                        id: Name("__debug__"),
                        range: 6..15,
                        node_index: NodeIndex(None),
                    },
                    type_params: None,
                    arguments: None,
                    body: [
                        Expr(
                            StmtExpr {
                                node_index: NodeIndex(None),
                                range: 17..20,
                                value: EllipsisLiteral(
                                    ExprEllipsisLiteral {
                                        node_index: NodeIndex(None),
                                        range: 17..20,
                                    },
                                ),
                            },
                        ),
                    ],
                    implementation: None,
                },
            ),
            ClassDef(
                StmtClassDef {
                    node_index: NodeIndex(None),
                    range: 35..58,
                    decorator_list: [],
                    name: Identifier {
                        id: Name("C"),
                        range: 41..42,
                        node_index: NodeIndex(None),
                    },
                    type_params: Some(
                        TypeParams {
                            range: 42..53,
                            node_index: NodeIndex(None),
                            type_params: [
                                TypeVar(
                                    TypeParamTypeVar {
                                        node_index: NodeIndex(None),
                                        range: 43..52,
                                        name: Identifier {
                                            id: Name("__debug__"),
                                            range: 43..52,
                                            node_index: NodeIndex(None),
                                        },
                                        lower_bound: None,
                                        bound: None,
                                        default: None,
                                        variance: None,
                                        is_reified: false,
                                    },
                                ),
                            ],
                            separators: TypeParamSeparators {
                                positional_only_count: None,
                                keyword_only_start: None,
                                slash_range: None,
                                star_range: None,
                            },
                        },
                    ),
                    arguments: None,
                    body: [
                        Expr(
                            StmtExpr {
                                node_index: NodeIndex(None),
                                range: 55..58,
                                value: EllipsisLiteral(
                                    ExprEllipsisLiteral {
                                        node_index: NodeIndex(None),
                                        range: 55..58,
                                    },
                                ),
                            },
                        ),
                    ],
                    implementation: None,
                },
            ),
        ],
    },
)
```
## Semantic Syntax Errors

  |
1 | class __debug__: ...  # class name
  |       ^^^^^^^^^ Syntax Error: cannot assign to `__debug__`
2 | class C[__debug__]: ...  # type parameter name
  |


  |
1 | class __debug__: ...  # class name
2 | class C[__debug__]: ...  # type parameter name
  |         ^^^^^^^^^ Syntax Error: cannot assign to `__debug__`
  |
