crates/ruff_python_parser/tests/snapshots/invalid_syntax@debug_shadow_function.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/inline/err/debug_shadow_function.py
---
## AST

```
Module(
    ModModule {
        node_index: NodeIndex(None),
        range: 0..170,
        body: [
            FunctionDef(
                StmtFunctionDef {
                    node_index: NodeIndex(None),
                    range: 0..20,
                    is_async: false,
                    decorator_list: [],
                    name: Identifier {
                        id: Name("__debug__"),
                        range: 4..13,
                        node_index: NodeIndex(None),
                    },
                    type_params: None,
                    parameters: Parameters {
                        range: 13..15,
                        node_index: NodeIndex(None),
                        posonlyargs: [],
                        args: [],
                        vararg: None,
                        kwonlyargs: [],
                        kwarg: None,
                    },
                    returns: None,
                    body: [
                        Expr(
                            StmtExpr {
                                node_index: NodeIndex(None),
                                range: 17..20,
                                value: EllipsisLiteral(
                                    ExprEllipsisLiteral {
                                        node_index: NodeIndex(None),
                                        range: 17..20,
                                    },
                                ),
                            },
                        ),
                    ],
                },
            ),
            FunctionDef(
                StmtFunctionDef {
                    node_index: NodeIndex(None),
                    range: 38..61,
                    is_async: false,
                    decorator_list: [],
                    name: Identifier {
                        id: Name("f"),
                        range: 42..43,
                        node_index: NodeIndex(None),
                    },
                    type_params: Some(
                        TypeParams {
                            range: 43..54,
                            node_index: NodeIndex(None),
                            type_params: [
                                TypeVar(
                                    TypeParamTypeVar {
                                        node_index: NodeIndex(None),
                                        range: 44..53,
                                        name: Identifier {
                                            id: Name("__debug__"),
                                            range: 44..53,
                                            node_index: NodeIndex(None),
                                        },
                                        bound: None,
                                        default: None,
                                        variance: None,
                                    },
                                ),
                            ],
                        },
                    ),
                    parameters: Parameters {
                        range: 54..56,
                        node_index: NodeIndex(None),
                        posonlyargs: [],
                        args: [],
                        vararg: None,
                        kwonlyargs: [],
                        kwarg: None,
                    },
                    returns: None,
                    body: [
                        Expr(
                            StmtExpr {
                                node_index: NodeIndex(None),
                                range: 58..61,
                                value: EllipsisLiteral(
                                    ExprEllipsisLiteral {
                                        node_index: NodeIndex(None),
                                        range: 58..61,
                                    },
                                ),
                            },
                        ),
                    ],
                },
            ),
            FunctionDef(
                StmtFunctionDef {
                    node_index: NodeIndex(None),
                    range: 85..106,
                    is_async: false,
                    decorator_list: [],
                    name: Identifier {
                        id: Name("f"),
                        range: 89..90,
                        node_index: NodeIndex(None),
                    },
                    type_params: None,
                    parameters: Parameters {
                        range: 90..101,
                        node_index: NodeIndex(None),
                        posonlyargs: [],
                        args: [
                            ParameterWithDefault {
                                range: 91..100,
                                node_index: NodeIndex(None),
                                parameter: Parameter {
                                    range: 91..100,
                                    node_index: NodeIndex(None),
                                    name: Identifier {
                                        id: Name("__debug__"),
                                        range: 91..100,
                                        node_index: NodeIndex(None),
                                    },
                                    annotation: None,
                                },
                                default: None,
                            },
                        ],
                        vararg: None,
                        kwonlyargs: [],
                        kwarg: None,
                    },
                    returns: None,
                    body: [
                        Expr(
                            StmtExpr {
                                node_index: NodeIndex(None),
                                range: 103..106,
                                value: EllipsisLiteral(
                                    ExprEllipsisLiteral {
                                        node_index: NodeIndex(None),
                                        range: 103..106,
                                    },
                                ),
                            },
                        ),
                    ],
                },
            ),
            Expr(
                StmtExpr {
                    node_index: NodeIndex(None),
                    range: 125..144,
                    value: Lambda(
                        ExprLambda {
                            node_index: NodeIndex(None),
                            range: 125..144,
                            parameters: Some(
                                Parameters {
                                    range: 132..141,
                                    node_index: NodeIndex(None),
                                    posonlyargs: [],
                                    args: [
                                        ParameterWithDefault {
                                            range: 132..141,
                                            node_index: NodeIndex(None),
                                            parameter: Parameter {
                                                range: 132..141,
                                                node_index: NodeIndex(None),
                                                name: Identifier {
                                                    id: Name("__debug__"),
                                                    range: 132..141,
                                                    node_index: NodeIndex(None),
                                                },
                                                annotation: None,
                                            },
                                            default: None,
                                        },
                                    ],
                                    vararg: None,
                                    kwonlyargs: [],
                                    kwarg: None,
                                },
                            ),
                            body: NumberLiteral(
                                ExprNumberLiteral {
                                    node_index: NodeIndex(None),
                                    range: 143..144,
                                    value: Int(
                                        0,
                                    ),
                                },
                            ),
                        },
                    ),
                },
            ),
        ],
    },
)
```
## Semantic Syntax Errors

  |
1 | def __debug__(): ...  # function name
  |     ^^^^^^^^^ Syntax Error: cannot assign to `__debug__`
2 | def f[__debug__](): ...  # type parameter name
3 | def f(__debug__): ...  # parameter name
  |


  |
1 | def __debug__(): ...  # function name
2 | def f[__debug__](): ...  # type parameter name
  |       ^^^^^^^^^ Syntax Error: cannot assign to `__debug__`
3 | def f(__debug__): ...  # parameter name
4 | lambda __debug__: 0  # lambda parameter name
  |


  |
1 | def __debug__(): ...  # function name
2 | def f[__debug__](): ...  # type parameter name
3 | def f(__debug__): ...  # parameter name
  |       ^^^^^^^^^ Syntax Error: cannot assign to `__debug__`
4 | lambda __debug__: 0  # lambda parameter name
  |


  |
2 | def f[__debug__](): ...  # type parameter name
3 | def f(__debug__): ...  # parameter name
4 | lambda __debug__: 0  # lambda parameter name
  |        ^^^^^^^^^ Syntax Error: cannot assign to `__debug__`
  |
